fix white gap navbar, update seed trip dates

--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -370,6 +370,8 @@ a {
 
 html {
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-reduced-motion: reduce) {
